fixed eslint rules

--- a/package.json
+++ b/package.json
@@ -41,5 +41,10 @@
     "eslint-config-next": "15.2.2",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "eslintConfig": {
+    "rules": {
+      "no-var": "off"
+    }
   }
 }
