--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@libsql/client": "^0.8.1",
     "@prisma/adapter-libsql": "^6.5.0",
     "@prisma/client": "^6.5.0",
@@ -19,6 +20,7 @@
     "@stripe/stripe-js": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.6.2",
     "jose": "^6.0.10",
     "lucide-react": "^0.479.0",
     "next": "15.2.2",
