--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@libsql/client": "^0.8.1",
     "@prisma/adapter-libsql": "^6.5.0",
     "@prisma/client": "^6.5.0",
+    "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-select": "^2.1.6",
